--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -399,3 +399,204 @@ svg {
 	     }
     }
 }
+
+.commission {
+	.commission-title {
+		font-weight: bold;
+		font-size: 24px;
+		color: $c3;
+		padding: 12px 0;
+		background: $c6;
+		border-radius: 4px;
+		text-align: center;
+		margin-bottom: 0;
+	}
+	.commission-list {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		padding: 16px 0;
+		.commission-item {
+			width: 48%;
+			margin-bottom: 16px;
+			display: flex;
+			justify-content: flex-start;
+			p {
+				margin-right: 24px;
+			}
+			.commission-item-child {
+				width: 100px;
+				color: $c3;
+				img {
+					width: 100%;
+					height: auto;
+				}
+				a {
+					color: $c3;
+					text-decoration: underline;
+				}
+			}
+		}
+	}
+	.commission-nav  {
+		.nav-pills {
+			.nav-item {
+				.nav-link {
+					font-weight: bold;
+					margin: 0 4px;
+					border-radius: 8px;
+					border:none;
+					padding: 12px 20px;
+					&:not(.active) {
+						color: $c3;
+						background: $c6;
+					}
+				}
+				&:first-child {
+					.nav-link {
+						margin-left: 0;
+					}
+				}
+				&:last-child {
+					.nav-link {
+						margin-right: 0;
+					}
+				}
+			}
+		}
+		.table {
+			text-align: left;
+			margin-top: 12px;
+			th {
+				background: $c6;
+				border: none;
+				font-weight: normal;
+				padding: 16px 12px;
+				&:first-child {
+					border-top-left-radius: 4px;
+					border-bottom-left-radius: 4px;
+				}
+				&:last-child {
+					border-top-right-radius: 4px;
+					border-bottom-right-radius: 4px;
+				}
+			}
+			td {
+				border: none;
+				white-space: nowrap;
+				a {
+					text-decoration: underline;
+					color: $c3;
+				}
+				.dot {
+					display: inline-block;
+					width: 10px;
+					height: 10px;
+					border-radius: 12px;
+					background: #ff0000	;
+					margin-right: 4px;
+					&.open {
+						background: #77c509;
+					}
+				}
+			}
+		}
+	}
+	@media (max-width: 500px) {
+		.commission-title {
+			font-size: 20px;
+		}
+		.commission-list {
+			padding: 16px 0;
+			.commission-item {
+				width: 100%;
+				margin-bottom: 16px;
+				p {
+					width: 50%;
+					margin-right: 24px;
+				}
+			}
+		}
+		.commission-nav  {
+			.nav-pills {
+				.nav-item {
+					.nav-link {
+						padding: 12px 8px;
+						font-size: 12px;
+					}
+				}
+			}
+			.table {
+				width: 600px;
+			}
+		}
+	}
+}
+
+#open-commission {
+	 .modal-dialog {
+	 	max-width: fit-content;
+	 	.modal-header {
+	 		padding: 16px 0 12px;
+	 	}
+	 	.table {
+			text-align: left;
+			margin-top: 12px;
+			th {
+				background: $c6;
+				border: none;
+				font-weight: normal;
+				padding: 16px;
+				&:first-child {
+					border-top-left-radius: 4px;
+					border-bottom-left-radius: 4px;
+				}
+				&:last-child {
+					border-top-right-radius: 4px;
+					border-bottom-right-radius: 4px;
+				}
+			}
+			td {
+				border: none;
+				white-space: nowrap;
+				padding: 16px;
+				a {
+					text-decoration: underline;
+					color: $c3;
+				}
+				.dot {
+					display: inline-block;
+					width: 10px;
+					height: 10px;
+					border-radius: 12px;
+					background: #ff0000	;
+					margin-right: 4px;
+					&.open {
+						background: #77c509;
+					}
+				}
+			}
+			tfoot  {
+				td {
+					background: $c6;
+					border: none;
+					font-weight: normal;
+					&:first-child {
+						border-top-left-radius: 4px;
+						border-bottom-left-radius: 4px;
+					}
+					&:last-child {
+						border-top-right-radius: 4px;
+						border-bottom-right-radius: 4px;
+					}
+				}
+			}
+		}
+
+	 }
+	 @media (max-width: 500px) {
+	 	.table {
+	 		width: 960px;
+	 	}
+	 }
+}
