--- a/client/css/main.css
+++ b/client/css/main.css
@@ -5960,3 +5960,192 @@ svg {
     width: 90%;
   }
 }
+
+.commission .commission-title {
+  font-weight: bold;
+  font-size: 24px;
+  color: #005aaa;
+  padding: 12px 0;
+  background: #daf1f9;
+  border-radius: 4px;
+  text-align: center;
+  margin-bottom: 0;
+}
+.commission .commission-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 16px 0;
+}
+.commission .commission-list .commission-item {
+  width: 48%;
+  margin-bottom: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.commission .commission-list .commission-item p {
+  margin-right: 24px;
+}
+.commission .commission-list .commission-item .commission-item-child {
+  width: 100px;
+  color: #005aaa;
+}
+.commission .commission-list .commission-item .commission-item-child img {
+  width: 100%;
+  height: auto;
+}
+.commission .commission-list .commission-item .commission-item-child a {
+  color: #005aaa;
+  text-decoration: underline;
+}
+.commission .commission-nav .nav-pills .nav-item .nav-link {
+  font-weight: bold;
+  margin: 0 4px;
+  border-radius: 8px;
+  border: none;
+  padding: 12px 20px;
+}
+.commission .commission-nav .nav-pills .nav-item .nav-link:not(.active) {
+  color: #005aaa;
+  background: #daf1f9;
+}
+.commission .commission-nav .nav-pills .nav-item:first-child .nav-link {
+  margin-left: 0;
+}
+.commission .commission-nav .nav-pills .nav-item:last-child .nav-link {
+  margin-right: 0;
+}
+.commission .commission-nav .table {
+  text-align: left;
+  margin-top: 12px;
+}
+.commission .commission-nav .table th {
+  background: #daf1f9;
+  border: none;
+  font-weight: normal;
+  padding: 16px 12px;
+}
+.commission .commission-nav .table th:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.commission .commission-nav .table th:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.commission .commission-nav .table td {
+  border: none;
+  white-space: nowrap;
+}
+.commission .commission-nav .table td a {
+  text-decoration: underline;
+  color: #005aaa;
+}
+.commission .commission-nav .table td .dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 12px;
+  background: #ff0000;
+  margin-right: 4px;
+}
+.commission .commission-nav .table td .dot.open {
+  background: #77c509;
+}
+@media (max-width: 500px) {
+  .commission .commission-title {
+    font-size: 20px;
+  }
+  .commission .commission-list {
+    padding: 16px 0;
+  }
+  .commission .commission-list .commission-item {
+    width: 100%;
+    margin-bottom: 16px;
+  }
+  .commission .commission-list .commission-item p {
+    width: 50%;
+    margin-right: 24px;
+  }
+  .commission .commission-nav .nav-pills .nav-item .nav-link {
+    padding: 12px 8px;
+    font-size: 12px;
+  }
+  .commission .commission-nav .table {
+    width: 600px;
+  }
+}
+
+#open-commission .modal-dialog {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+#open-commission .modal-dialog .modal-header {
+  padding: 16px 0 12px;
+}
+#open-commission .modal-dialog .table {
+  text-align: left;
+  margin-top: 12px;
+}
+#open-commission .modal-dialog .table th {
+  background: #daf1f9;
+  border: none;
+  font-weight: normal;
+  padding: 16px;
+}
+#open-commission .modal-dialog .table th:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+#open-commission .modal-dialog .table th:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+#open-commission .modal-dialog .table td {
+  border: none;
+  white-space: nowrap;
+  padding: 16px;
+}
+#open-commission .modal-dialog .table td a {
+  text-decoration: underline;
+  color: #005aaa;
+}
+#open-commission .modal-dialog .table td .dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 12px;
+  background: #ff0000;
+  margin-right: 4px;
+}
+#open-commission .modal-dialog .table td .dot.open {
+  background: #77c509;
+}
+#open-commission .modal-dialog .table tfoot td {
+  background: #daf1f9;
+  border: none;
+  font-weight: normal;
+}
+#open-commission .modal-dialog .table tfoot td:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+#open-commission .modal-dialog .table tfoot td:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+@media (max-width: 500px) {
+  #open-commission .table {
+    width: 960px;
+  }
+}
