--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -70,7 +70,21 @@ $c-text: #a1a4ae;
 		}
 	}
 	@media (max-width: 500px) {
-		
+		.nav-pills {
+			.nav-item {
+				.nav-link {
+					font-size: 12px;
+					padding: 12px;
+				}
+			}
+		}
+		.withdraw-money__form {
+			width: 100%;
+			.withdraw-money__form-note {
+				padding-left: 0;
+				padding-right: 0;
+			}
+		}
 	}
 }
 .form-btn {
