--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6225,3 +6225,12 @@ svg {
     width: 90%;
   }
 }
+
+@media (max-width: 385px) {
+  .wrap .body .ct .primary .content .box.investment-manager .nav li a {
+    font-size: 12px;
+  }
+}
+.wrap .body .ct .sidebar-right .referral a {
+  height: 100%;
+}
